--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>ec.project</groupId>
     <artifactId>db-migration</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
+
 
 </project>
