--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>ec.project</groupId>
     <artifactId>db-migration</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>dbmigrationimplementation</module>
+    </modules>
+
     <build>
         <plugins>
             <plugin>
