--- a/dbmigrationprovider/pom.xml
+++ b/dbmigrationprovider/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
         <dependency>
+            <artifactId>db-migration</artifactId>
+            <groupId>ec.project</groupId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.18.0</version>
