--- a/db-migration-provider/pom.xml
+++ b/db-migration-provider/pom.xml
@@ -14,10 +14,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>ec.project</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>db-migration-service</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
@@ -34,6 +33,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.8.47</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
