refactored some places, added equals and hashcode methods to some classes, generally, made some changes

--- a/db-migration-provider/pom.xml
+++ b/db-migration-provider/pom.xml
@@ -14,10 +14,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>ec.project</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>db-migration-service</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
